--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.7",
     "redux": "^4.2.0",
     "redux-toolkit": "^1.1.2",
     "uuid": "^9.0.0",
